@@ -5,7 +5,8 @@ New-AppSourceSubmission obsoleted parameter -doNotCheckVersionNumber that was pr
 Issue 3219 Run-AlValidation cannot validate against Next Major without an insider Sas token
 Do not attempt to call Get-BcContainerAppInfo if we are using filesonly containers in Run-AlPipeline
 Do not attempt to download unknown symbols from filesonly containers
-Add paramater generateErrorLog to Compile-AppInNavContainer
+Add parameter generateErrorLog to Compile-AppInNavContainer
+Issue 3229 Add parameter replaceVersionNumber to Replace-DependenciesInAppFile
 
 6.0.0
 Add parameter -accept_insiderEULA on New-BcContainer, Get-BcArtifactUrl and Run-AlPipeline to accept the insider EULA (https://go.microsoft.com/fwlink/?linkid=2245051) instead of using the insider SAS token.
